Revert "Fixed top left banner alignment"
This reverts commit 254d26ae57b44348201519db2418f59d3a9e40bb.

--- a/futura/res/css/ss.css
+++ b/futura/res/css/ss.css
@@ -105,7 +105,8 @@ div.topbanner
 
 div.topleftbanner
 {
-  margin-left: 5%;  
+  margin-left: 5%;
+  margin-top: 4%;
   letter-spacing: 0.05em;
   font-weight: 400;
 }
@@ -124,13 +125,13 @@ div.topleftbanner
 
 div.topleft
 {
-  display: flex;
-  justify-content: left;
-  align-items: center;
+  display: inline;
+  float: left;
   background-color: var(--main-bright-colour);
   height: 100px;  
   width: 30%;
-  min-width: 300px;    
+  min-width: 300px;  
+  clear: left;  
 }
 
 div.topright
